# ogre-slam

./: .gitignore  CLAUDE.md  DEBUGGING_SESSION_NOV16.md  IMPLEMENTATION.md  ISAAC_SIM_QUICKSTART.md  LICENSE  MAZE_GENERATOR.md  NAV2_README.md  OGRE_WIDE.md  QUICKSTART.md  README.md  TESTING_SESSION_1.md  frames_2025-11-16_12.32.21.gv  frames_2025-11-16_14.11.16.gv  frames_2025-11-16_14.21.36.gv  ogre.rviz  ogre.usd  ogre_stable.usd  package.xml  setup.cfg  setup.py
config/: amcl_params.yaml  ekf_params.yaml  nav2_params.yaml  nav2_params.yaml.backup  odometry_params.yaml  slam_toolbox_params.yaml
docs/: IMPLEMENTATION.md  ISAAC_SIM.md  MAZE_GENERATOR.md  NAV2_README.md  TELEOPERATION_IMPORTANCE.md
launch/: mapping.launch.py  navigation.launch.py
maps/: isaac_sim_map.pgm  isaac_sim_map.yaml  maze_test_1.pgm  maze_test_1.yaml  maze_test_2.pgm  maze_test_2.yaml  maze_test_3.pgm  maze_test_3.yaml  my_map.pgm  my_map.yaml  wide_maze.pgm  wide_maze.yaml
ogre_policy_controller/: package.xml  setup.cfg  setup.py
ogre_policy_controller/config/: policy_controller_params.yaml
ogre_policy_controller/launch/: policy_controller.launch.py
ogre_policy_controller/models/: policy.onnx  policy.pt
ogre_policy_controller/ogre_policy_controller/: __init__.py  policy_controller_node.py
ogre_slam/: __init__.py  dummy_odom_node.py  encoder_reader.py  mecanum_odometry.py  odometry_node.py
rviz/: navigation.rviz  slam_universal.rviz
scripts/: debug_isaac_crash.sh  generate_maze.py  launch_isaac_sim_rviz.sh  launch_mapping_session.sh  remote_launch_nav_rviz.sh  (+2 more)
(+3 files in other folders)
